i18n work for project libraries and run listing; fixed misaligned content when viewing copied projects in webkit browsers; style updates for library, login, and create run pages; create run cancel button redirects back to library now instead of teacher home

--- a/src/main/webapp/themes/tels/default/styles/styles.css
+++ b/src/main/webapp/themes/tels/default/styles/styles.css
@@ -148,15 +148,19 @@
 #setUpRunBox .projectSummary {
 	margin:1em;
 	padding:.5em;
-	font-size:1.2em;
+	font-size:1.1em;
 }
 
-#setRunBox div.projectTitle {
+#setUpRunBox div.projectTitle {
 	color:#007391;
 }
 
 #setUpRunBox .projectSummary div {
 	margin: 0 0 .5em;
+}
+
+#setUpRunBox .projectSummary p {
+	margin:0;
 }
 
 #reviewRunBox {
